# mail-analyzer

./: .env--sample  .gitignore  README.md  pyproject.toml  requirements.txt  run_fetch_mails.py  run_list_mailboxes.py  util.py
app_config/: config_loader.py  constants.py  env_config.py
core/: email_record.py  fetch_emails.py  handler.py  imap.py  make_list.py
scripts/: cleanup.sh  make_exe.sh  rebuild.sh
src/: bootstrap.py  util.py
src/app_config/: config.json  config_loader.py  constants.py  env_config.py  fernet_cipher.py  logger_manager.py
src/core/: fetch_emails.py  handler.py  imap.py  make_list.py
src/tool/: encrypt_env_key.py  generate_config_loader.py  generate_env_config.py  print_tree.py
test/: test_fernet_cipher_pytest.py
tool/: encrypt_env_key.py  generate_config_loader.py  generate_env_config.py
