[project]
name = "mail-analysis"
version = "0.1.0"
description = "メール分析ツール"
authors = [
    {name = "Your Name",email = "you@example.com"}
]

packages = [
    { include = "config" },
    { include = "core" }
]

include = [
    "run_fetch_mails.py",
    "run_list_mailboxes.py"
]
# readme = "README.md"
# requires-python = ">=3.10,<3.14"
dependencies = [
    "altgraph (==0.17.4)",
    "black (==25.1.0)",
    "click (==8.2.1)",
    "colorama (==0.4.6)",
    "imap-tools (==1.10.0)",
    "isort (==6.0.1)",
    "mypy-extensions (==1.1.0)",
    "packaging (==25.0)",
    "pathspec (==0.12.1)",
    "pefile (==2023.2.7)",
    "platformdirs (==4.3.8)",
    "pyinstaller (==6.14.1)",
    "pyinstaller-hooks-contrib (==2025.5)",
    "python-dotenv (==1.1.0)",
    "pytoolconfig (==1.3.1)",
    "pywin32-ctypes (==0.2.3)",
    "rope (==1.13.0)",
    "ruff (==0.11.13)",
    "setuptools (==80.9.0)",
    "tqdm (==4.67.1)"
]

[tool.poetry.scripts]
fetch-mails = "run_fetch_mails:main"
list-mailboxes = "run_list_mailboxes:main"

[tool.poetry.dependencies]
python = ">=3.10,<3.14"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
src_paths = ["src"]
line_length = 120
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.black]
line-length = 120
target-version = ["py310"]
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
  "test"
]
pythonpath = ["src"]
